CHANGES -- trio


The changes listed without a name attributed to them were most likely done by
Bjorn Reese and/or Daniel Stenberg.

Version 1.16 - XXXX/XX/XX
-------------------------
* David Turner
  Changed trionan to use sigaction() instead of signal().


Version 1.15 - 2010/09/12
-------------------------
* Jiri Hruska
  Added the trio_cprintff() and trio_cscanff() function.

* Fixed calculation of fraction digits for %#g numbers involving rounding
  (reported by Lajos Foldy).


Version 1.14 - 2010/01/26
-------------------------
* David Byron
  Added trio_xstring_append_max.

* Fixed compilation problem on Cygwin due to lack of long double math
  (reported by Matthias Andree).

* David Boyce
  Added #undef of standard stdio function names before assigning trio functions
  to them.

* Matthias Andree
  Upgraded configure.in to use new macros instead of obsoleted macros.

* Matthias Andree
  Added VPATH to Makefile.in

* Tom Honermann
  Fixed problem with subnormal numbers which caused an infinite loop outputting
  leading spaces.

* Adam McLaurin
  Improved parsing performance by avoiding memset() and memcpy() on character
  arrays.

* Gideon Smeding
  Fixed %u scanning of signed numbers.

* Gideon Smeding
  Fixed group scanning for non-matching input.

* Fixed missing undo of look-ahead reading for scanf functions. This does only
  work for the scanf* and fscanf* functions, not dscanf* and cscanf* functions
  (reported by Gideon Smeding).

* If the format string is empty, scanf does not attempt to read any input.

* Ralf Junker
  Fixed Borland compilation for user-defined specifiers.


Version 1.13 - 2008/11/09
-------------------------
* Ives Aerts
  Added the $<format|skip> format for user-defined specifiers, which is
  compatible with compiler warnings about mismatches between specifiers and
  arguments.

* Added TRIO_DEPRECATED flag (reported by David Boyce)

* Fixed rounding adjustment for long double (reported as bug item #2136686).
